Started to layout for Large devices. Header and two column module done.

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,8 +9,8 @@
 WebFont.load({
 google: {
 families: [
-'Open Sans:300,400,400i,700',
-'Rubik:300,400,400i,500,600,700,800,900']
+'Catamaran:100,200,300,400,500,600,700,800,900',
+'Crimson Text:400,400i,600,600i,700,700i']
 }
 });
 </script>
