--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,9 +1,8 @@
-
+@import 'critical';
 // ––––––––––––––Generic Modules & Typography
 @import 'helpers/typography';
 // ––––––––––––––Layouts
-
-
+@import 'layouts/home';
 // ––––––––––––––Print Styles
 @import 'reset/print';
 
