--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,9 +9,8 @@
 WebFont.load({
 google: {
 families: [
-'Catamaran:100,200,300,400,500,600,700,800,900',
-'Crimson Text:400,400i,600,600i,700,700i']
-}
+'Catamaran:100,200,300,400,500,600,700,800,900'
+]}
 });
 </script>
 <!-- GOOGLE ANALITYCS -->
