--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,57 +1,122 @@
 ---
 layout: default
 ---
-<header id="home-header" class="home-header">
-  <div class="home-header_wrap">
-    <div class="home-header_eyebrow">David Gallardo</div>
-    <div class="copy-block">
-      <h1 class="home-header_title">A guy who's focused on designing products that work beautifully.</h1>
-      <a class="home-header_btn" href="#">Say Hello</a>
-    </div>
-    <div class="home-header_pattern"></div>
-    <div class="white-block"></div>
-    <div class="home-header_color-boxes">
-      <div class="grey-box"></div>
-      <div class="red-box"></div>
+<header id="hm-header" class="hm-header">
+  <div class="box-wrap">
+    <div class="header-box_dark"></div>
+    <div class="header-box_light"></div>
+  </div>
+  <div class="wrap">
+    <div class="header-eyebrow" id="logo"><span>David Gallardo</span></div>
+    <div class="header-title">
+      <h1>A guy who's focused on designing products that work beautifully.</h1>
+      <div class="arrow"></div>
     </div>
   </div>
 </header>
-<section id="my-story" class="my-story">
-  <div class="my-story_wrap">
+<section id="story" class="story">
+  <div class="story_wrap wrap">
     <div class="white-block">
-      <div class="my-story_title">
+      <div class="story_title">
         <h2>My long story, short.</h2>
       </div>
-      <div class="my-story_column-block">
-        <div class="my-story_column column-left">
-          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="#">traveling</a> around the world the whole 2017. Me & my partner started in Rusia and will finish in San Francisco.</p>
-          <p>Before that decision, I was working at <a href="#">Lola</a> [Mullenlowe Group] as a Lead Designer of a team of 3 to 4 other designers. Even with a group that small, we got a really big project in our hands: Rethink & Improve the Global Digital Ecosystem of the largest Spanish automotive brand, <a href="#">SEAT</a>.</p>
+      <div class="story_column-block">
+        <div class="story_column">
+          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/">traveling</a> the world during 2017. My couple and I started in St.Petersburg and finished in San Francisco.</p>
+          <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/">LOLA</a> [Mullenlowe Group] leading a small team of 3 to 4 other designers. Even with a group that small, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
         </div>
-        <div class="my-story_column column-right">
-          <p>Previously, I worked for a really cool company called <a href="#">Mobivery</a>. There I crafted tons of mobile applications for all the clients & platforms you can imagine. Also there, I had the opportunity to work on <a href="#">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
+        <div class="story_column">
+          <p>Even before, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
           <p>
-          In the side, I taught design in schools like <a href="#">Ironhack</a> or <a href="#">TheAppSchool</a>; and directly to design teams inside companies like <a href="#">Schneider Electrics</a> or <a href="#">TV3</a>.</p>
+            In the side, I taught design in schools like <a href="https://www.ironhack.com/">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
+          </div>
+          <div class="story_column_small">
+            <ul class="story-list">
+              <li class="list_item"><span>2011</span>Mobivery</li>
+              <li class="list_item"><span>2014</span>LOLA [Mullenlowe]</li>
+              <li class="list_item"><span>2017</span>The Earth  <span class="planet">🌏</span></li>
+              <li class="list_item"><span>2018</span><a href="#">Your company?</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-
-
-
-<!-- 
-<section>
-  <ul>
-    {% for post in site.categories.case limit:10 %}
-      <li >
-        <div>
-          <h3><a href="{{ post.url | relative_url }}">{{post.title}}</a></h3>
-          <div>{{post.type}}</div>
-          <p>{{post.excerpt}}</p>
-          <a href="{{ post.url | relative_url }}"">Leer Post</a>
-        </div>
-      </li>
-    {% endfor %}
-  </ul>
-</section> -->
+  </section>
+  <section id="showcase" class="showcase">
+    <div class="wrap">
+      <div class="green_pattern"></div>
+      <div class="showcase_title">
+        <h2>Showcase of recent projects.</h2>
+        <p>I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
+      </div>
+    </div>
+    <div class="wrap">
+      <ul class="showcase-block">
+        {% for post in site.categories.case limit:10 %}
+          {% if post.number == "01" %}
+            <li id="seat-case" class="showcase_item">
+              <div class="item_image-block item_image-block_{{ post.number }}">
+                <div class="item_title">
+                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG</span></h3></a>
+                </div>
+              </div>
+              <div class="item_copy-block">
+                <div class="item_copy-block_inner">
+                  <div class="item_subtitle">{{post.type}}</div>
+                  <p class="item_copy">{{post.excerpt}}</p>
+                  <a href="http://www.seat.com" class="case-link">View Website</a>
+                </div>
+              </div>
+            </li>
+          {% endif %}
+          {% if post.number == "02" %}
+            <li id="robot-case" class="showcase_item">
+              <div class="item_image-block item_image-block_{{ post.number }}">
+                <div class="item_title">
+                  <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
+                </div>
+              </div>
+              <div class="item_copy-block">
+                <div class="item_copy-block_inner">
+                  <div class="item_subtitle">{{post.type}}</div>
+                  <p class="item_copy">{{post.excerpt}}</p>
+                  <a href="http://www.seat.com" class="case-link">View Website</a>
+                </div>
+              </div>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+  </section>
+  <section id="showcase" class="showcase">
+    <div class="wrap">
+      <div class="green_pattern"></div>
+      <div class="showcase_title">
+        <h2>More, maybe old maybe gone.</h2>
+        <p>I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
+      </div>
+    </div>
+    <div class="wrap">
+      <ul class="example-grid">
+        <li class="grid-item item-01">
+          <figure class="item-image">
+            <img src="/images/grid/lola.png" alt="Lola MullenLowe Website">
+          </figure>
+          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
+        </li>
+        <li class="grid-item item-02">
+          <figure class="item-image">
+            <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
+          </figure>
+          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
+        </li>
+        <li class="grid-item item-03">
+          <figure class="item-image">
+            <img src="/images/grid/caixabank.png" alt="CaixaBank Media center concept">
+          </figure>
+          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
+        </li>
+      </ul>
+    </div>
+  </section>
