--- a/_scss/critical.scss
+++ b/_scss/critical.scss
@@ -6,7 +6,7 @@
 html {
   font-size: 100%;
   font-size: $base-typography;
-  //MEDIA QUERY
+
   @include media($m) {
     font-size: $base-typography
   }
@@ -36,7 +36,7 @@ main {
 }
 ::selection {
   color: white;
-  background: red;
+  background: $yellow;
 }
 ul, ol, figure {
   @include no-space;
@@ -45,6 +45,8 @@ ul, ol, figure {
     @include no-space
   }
 }
+
+@import '../_scss/modules/buttons';
 
 
 
