--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -1,76 +1,69 @@
 // Typography
 
-h1,h2,h3,h4,h5,p,ul,li,a {
-	@include no-space;
+h1, h2, h3, h4, h5, p, ul, li, a {
+  @include no-space;
 }
-
-h1{
-	@include catamaran(700,2.2rem);
-	color: white;
-	line-height: 1.15;
+h1 {
+  @include catamaran(700, 2.5rem);
+  color: white;
+  line-height: 1.08;
 }
-
-h2{
-	@include catamaran(700,2rem);
-	color: $grey-7;
-	line-height: 1.2;
+h2 {
+  @include catamaran(900, 2.4rem);
+  color: $title;
+  line-height: 1.125;
 }
-
-h3{
-	@include catamaran(800,2rem);
-	color: $grey-7;
-	line-height: 1.1;
+h3 {
+  @include catamaran(900, 2.4rem);
+  color: $title;
+  line-height: 1.125;
 }
-h4{
-	@include catamaran(700,1rem);
-	color: $grey-7;
-	line-height: 1.5;
+h4 {
+  @include catamaran(700, 1rem);
+  color: $title;
+  line-height: 1.5;
+  margin-bottom: 1rem;
 }
-
-p, li{
-	@include crimson(400,1rem);
-	color: $grey-6;
-	line-height: 1.3;
-	margin-bottom: 1rem;
+p, li {
+  @include catamaran(400, .9rem);
+  color: $text;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+  position: relative;
+  z-index: 1;
 }
-
-a{
-	color: inherit;
-	text-decoration: none;
-	position: relative;
-	transition: all .3s;
-	
-	&:before{
-		content: '';
-		width: 100%;
-		height: 1px;
-		display: block;
-		background: $red;
-		position: absolute;
-		left: 0;
-		bottom: 3px;
-		opacity: 1;
-		transition: all .3s;
-	}
-	&:hover{
-		color: $red;
-		transition: all .3s;
-		&:before{
-			bottom: -2px;
-			opacity: 1;
-		}
-
-	}
+a {
+  text-decoration: none;
+  color: inherit;
+  position: relative;
+  transition: all .3s;
+  font-weight: 700;
+  color: $title;
+  transition: all .3s;
+  &:after{
+    content: '';
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 7px;
+    left: 0;
+    background:$main;
+    z-index: -1;
+    transition: all .3s;
+  }
+  &:hover:after{
+      width: 108%;
+      height: 11px;
+      left: -4%;
+      transition: all .3s;
+  }
 }
-
-blockquote{
-	p{
-		padding-left: .5rem;
-		font-style: italic;
-	}	
+blockquote {
+  p {
+    padding-left: .5rem;
+    font-style: italic;
+  }
 }
-
-ul{
-	list-style: none;
+ul {
+  list-style: none;
 }
-
