--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -1,165 +1,121 @@
-/////////////////////////////////////////
-//HomeHeader
-/////////////////////////////////////////
-.home-header {
-  width: 100%;
-  display: block;
-  position: relative;
-  background: $grey-7;
-  padding-top: 6rem;
-}
-.white-block {
-  @include column(11, 12);
-  @include col-margin(1, 12);
-  padding: 1.5rem 0;
-  background: white;
-  box-shadow: -15px 0 0 white, 50px 0 0 white;
-  @include border-box;
-}
-.home-header_wrap {
-  @include out-container;
-  z-index: 1;
 
-  > .copy-block {
-    @include column(6, 12);
-    @include col-margin(1, 12);
-    padding-left: 1.5rem;
-    @include border-box;
-    margin-bottom: 8rem;
-  }
-  > .white-block {
-    height: 6rem;
-  }
-}
-.home-header_eyebrow {
-  @include column(6, 12);
-  @include col-margin(1, 12);
-  @include catamaran(300, 1rem);
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 1.4px;
-  margin-bottom: 1rem;
-}
-.home-header_title {
-  margin-bottom: 2rem;
-}
-.home-header_btn {
-  position: relative;
-  display: inline-block;
-  margin-left: .5rem;
-  padding: .8rem 1.4rem .7rem 1.4rem;
-  background: transparent;
-  @include catamaran(800, .8rem);
-  text-transform: uppercase;
-  color: white;
-  border-radius: $radius;
-  box-shadow: inset 0 0 0 3px white;
-  @include border-box;
+@import '../modules/header-home';
 
-  &:before, &:after{
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    background: $red;
-    display: block;
-    left: -6px;
-    top: 6px;
-    border-radius: $radius;
-    transition: all .3s;
-  }
-  &:hover{
-  	color: white;
-	  &:after {
-	    left: 0px;
-	    top: 0px;
-	    transition: all .3s;
-	  }
-	  &:before {
-	    left: -10px;
-    	top: 10px;
-    	background:rgba(0,0,0,.2);
-	    transition: all .3s;
-	  }
-	}
-}
-.home-header_color-boxes {
-  width: 430px;
-  height: auto;
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: -65px;
-
-  > .grey-box {
-    width: 50%;
-    height: 310px;
-    background: $grey-6;
-    float: left;
-  }
-  > .red-box {
-    width: 50%;
-    height: 320px;
-    background: $red;
-    float: left;
-    margin-top: -60px;
-  }
-}
-.home-header_pattern {
-  width: 210px;
-  height: 145px;
-  display: block;
-  position: absolute;
-  right: 110px;
-  top: 0px;
-  background: transparent url('../images/ui/pattern-white.svg') top left no-repeat;
-}
 /////////////////////////////////////////
 //MyStory
 /////////////////////////////////////////
-.my-story {
-  background: $grey-6;
+.story {
+  background: white;
+  margin-top: 7.5rem;
 }
-.my-story_wrap {
-  @include out-container;
+.story_title {
+  @include column(5, 12);
+  margin-left: 1/12*100%;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
 }
-.my-story_title {
-  @include column(6, 11);
-  @include col-margin(1, 11);
-  margin-bottom: 3rem;
+.story_column-block {
+  @include column(11, 12);
+  margin-left: 1/12*100%;
+  margin-bottom: 7.5rem;
 }
-.my-story_column-block {
-  @include column(9, 11);
-  @include col-margin(1, 11);
-  margin-bottom: 4.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: space-between;
-  box-shadow: inset 5px 0 0 $dividers;
+.story_column {
+  @include column(3.5, 11);
+  @include border-box;
+  margin-right: .5 / 11 * 100%;
+}
+.story_column_small {
+  @include column(3, 11);
+  margin-left: 0%;
+  @include omega;
+  @include border-box;
+  padding-left: 1rem;
+	border-left: 1px solid $main;
+}
+.list_item{
+	font-weight: 700;
+  color: $text;
+	margin-bottom: 1.7rem;
+  line-height: .8;
+	&:last-child{
+		margin-bottom: 0;
+	}
+	> span{
+		font-weight: 400;
+		margin-right: 1rem;
+	}
+}
 
-  .my-story_column {
-    @include border-box;
+/////////////////////////////////////////
+//Showcase
+/////////////////////////////////////////
 
-    > p {
-      padding-left: .4rem;
-      @include border-box;
+.showcase_title {
+  @include column(6, 12);
+  margin-left: 2/12*100%;
+  margin-top: 6rem;
 
-      &:last-child {
-        margin-bottom: 0;
-      }
+  > h2 {
+    margin-bottom: 1.2rem;
+    text-transform: uppercase;
+  }
+  > p {
+    margin-bottom: 0;
+  }
+}
+.green_pattern{
+  width: 204px;
+  height: 144px;
+  display: block;
+  position: absolute;
+  background:transparent url('../images/ui/pattern-green.svg') left top no-repeat;
+  top: 8rem;
+  right: 6rem;
+}
+
+@import '../modules/case-list';
+
+/////////////////////////////////////////
+//Grid
+/////////////////////////////////////////
+
+.example-grid{
+
+  margin: 7.5rem auto;
+  @include clearfix;
+
+  > .grid-item{
+    position: relative;
+    margin-bottom: 3rem;
+    .item-copy{
+      position: absolute;
+    }
+    img{
+      width: 100%;
     }
   }
-  > .column-left {
-    width: 5 / 9 * 100%;
-
-    > p {
-      width: 4 / 5 * 100%;
-      margin-left: .4 / 5 * 100%;
+  > .item-01{
+    .item-image{
+      @include column(7,12);
+      margin-left: 1/12*100%;
     }
   }
-  > .column-right {
-    width: 4 / 9 * 100%;
+  > .item-02{
+    .item-image{
+      @include column(5,12);
+      margin-left: 0;
+    }
+  }
+  > .item-03{
+    .item-image{
+      @include column(6,12);
+      margin-left: .5/12*100%;
+      @include omega;
+    }
   }
 }
+
+
+
+
+
