Grid and small desktop issues finished.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -80,7 +80,7 @@ layout: default
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
-                  <a href="http://www.seat.com" class="case-link">View Website</a>
+                  <a href="https://www.wefoundarobot.com" class="case-link">View Website</a>
                 </div>
               </div>
             </li>
@@ -98,25 +98,43 @@ layout: default
       </div>
     </div>
     <div class="wrap">
-      <ul class="example-grid">
-        <li class="grid-item item-01">
-          <figure class="item-image">
-            <img src="/images/grid/lola.png" alt="Lola MullenLowe Website">
-          </figure>
-          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
-        </li>
-        <li class="grid-item item-02">
-          <figure class="item-image">
-            <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
-          </figure>
-          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
-        </li>
-        <li class="grid-item item-03">
-          <figure class="item-image">
-            <img src="/images/grid/caixabank.png" alt="CaixaBank Media center concept">
-          </figure>
-          <div class="item-copy">LOLA MullenLowe Responsive Website design</div>
-        </li>
-      </ul>
+      <div class="example-grid">
+        <div class="grid-row">
+          <div class="grid-item item-01">
+            <figure class="item-image">
+              <img src="/images/grid/lola.png" alt="Lola MullenLowe Website">
+              <figcaption class="item-copy">LOLA MullenLowe Responsive Website design</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-item item-02">
+            <figure class="item-image">
+              <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
+              <figcaption class="item-copy">FCC Aqualia Water Use Dashboard</figcaption>
+            </figure>
+            
+          </div>
+          <div class="grid-item item-03">
+            <figure class="item-image">
+              <img src="/images/grid/caixabank.png" alt="CaixaBank Media center concept">
+              <figcaption class="item-copy">CaixaBank  Media Center Concept</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-item item-04">
+            <figure class="item-image">
+              <img src="/images/grid/wfa.png" alt="WFA Website Concept">
+              <figcaption class="item-copy">World Federation of Advertisers Website Concept</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="wrap">
+      <a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
     </div>
   </section>
