--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -24,7 +24,7 @@ h4 {
   line-height: 1.5;
   margin-bottom: 1rem;
 }
-p, li {
+p, li , figcaption{
   @include catamaran(400, .9rem);
   color: $text;
   line-height: 1.5;
@@ -43,7 +43,7 @@ a {
   &:after{
     content: '';
     width: 100%;
-    height: 4px;
+    height: 6px;
     position: absolute;
     bottom: 7px;
     left: 0;
