--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -53,7 +53,7 @@
 .showcase_title {
   @include column(6, 12);
   margin-left: 2/12*100%;
-  margin-top: 6rem;
+  margin-top: 4rem;
 
   > h2 {
     margin-bottom: 1.2rem;
@@ -84,35 +84,121 @@
   margin: 7.5rem auto;
   @include clearfix;
 
-  > .grid-item{
+    .grid-row{
+      margin-bottom: 3rem;
+       @include clearfix;
+    }
+
+   .grid-item{
     position: relative;
-    margin-bottom: 3rem;
+    
     .item-copy{
       position: absolute;
+      display: block;
+      width: 10.5rem;
+      height: auto;
+      &:after{
+        content: '';
+        width: 1rem;
+        height: 2px;
+        display: block;
+        position: absolute;
+        background:$main;
+        bottom: -.5rem;
+      }
     }
     img{
       width: 100%;
     }
   }
-  > .item-01{
+   .item-01{
+    .item-copy{
+      bottom: 1rem;
+      right: -11.5rem;
+    }
     .item-image{
       @include column(7,12);
       margin-left: 1/12*100%;
     }
   }
-  > .item-02{
+   .item-02{
+    .item-copy{
+      bottom: -4.5rem;
+      left: 0rem;
+    }
     .item-image{
       @include column(5,12);
       margin-left: 0;
+      padding-top: 15rem;
     }
   }
-  > .item-03{
+   .item-03{
+    .item-copy{
+      top: 8rem;
+      left: -11.5rem;
+      text-align: right;
+      &:after{
+        right: 0;
+      }
+    }
     .item-image{
       @include column(6,12);
       margin-left: .5/12*100%;
       @include omega;
     }
   }
+  .item-04{
+    .item-copy{
+      width: 11.5rem;
+      bottom: -4.5rem;
+      right: 0rem;
+      text-align: right;
+      &:after{
+        right: 0;
+      }
+    }
+    .item-image{
+      @include column(7,12);
+      margin-left: 3/12*100%;
+    }
+  }
+}
+
+
+/////////////////////////////////////////
+//Contact
+/////////////////////////////////////////
+
+.contact{
+  text-align: center;
+  margin: 12rem 0 6rem 0;
+}
+.contact-cta{
+    span{
+      position: relative;
+      @include catamaran(800, 2rem);
+      z-index: 1;
+      > span{
+        display: none;
+      }
+      &:after{
+        content: '';
+        width: 100%;
+        height: 10px;
+        position: absolute;
+        bottom: 16px;
+        left: 0;
+        background:$main;
+        z-index: -1;
+        transition: all .3s;  
+      }
+    }
+    &:hover span:after{
+      width: 104%;
+      height: 28px;
+      left: -2%;
+      transition: all .3s;
+    }
 }
 
 
