--- a/_scss/modules/header-home.scss
+++ b/_scss/modules/header-home.scss
@@ -3,6 +3,11 @@
 /////////////////////////////////////////
 .wrap {
   @include out-container;
+  padding: 0 1rem;
+  // overflow: hidden;
+  @include media($m) {
+    padding: 0;
+  }
 }
 /////////////////////////////////////////
 // Specific Styles
@@ -10,12 +15,20 @@
 .hm-header {
   width: 100%;
   max-width: $max-width;
-  height: 770px;
+  height: 520px;
   display: block;
   position: relative;
   background: white;
   margin: 0 auto;
-  margin-top: 2.5rem;
+  margin-top: .5rem;
+  @include media($m) {
+    height: 680px;
+    margin-top: 1rem;
+  }
+  @include media($l) {
+    height: 770px;
+    margin-top: 2.5rem;
+  }
   @include media($lx) {
     margin-top: 3.5rem;
   }
@@ -31,45 +44,111 @@
 }
 .header-box_dark{
   width: 50%;
-  height: 680px;
+  height: 480px;
   position: relative;
   top: 0;
   left: 0;
   background: #292A2B;
-  border-left: 2.5rem solid white;
+  border-left: .5rem solid white;
   @include border-box;
 
+  @include media($m) {
+    height: 650px;
+    border-left: 1rem solid white;
+  }
+  @include media($l) {
+    height: 680px;
+    border-left: 2.5rem solid white;
+  }
   @include media($lx) {
     border-left: 1.5rem solid white;
   }
 }
 .header-box_light{
   width: 50%;
-  height: 750px;
+  height: 480px;
   position: absolute;
-  top: 1rem;
+  top: .5rem;
   right: 0;
-  background: #2E2F30 url('../images/ui/header-illustration.svg') bottom right no-repeat;
-  background-size: cover;
-  border-right: 2.5rem solid white;
+  background: #2E2F30;
+  border-right: .5rem solid white;
   @include border-box;
 
+  @include media($m) {
+    top: 1rem;
+    height: 680px;
+    border-right: 1rem solid white;
+  }
+  @include media($l) {
+    height: 750px;
+    border-right: 2.5rem solid white;
+  }
   @include media($lx) {
     border-right: 1.5rem solid white;
+  }
+  
+  > .green-pattern{
+    width: 202px;
+    height: 142px;
+    display: block;
+    position: absolute;
+    background:transparent url('../images/ui/pattern-green.svg') left top no-repeat;
+    bottom: -2rem;
+    left: -5rem;
+    @include media($m) {
+      bottom: auto;
+      left: auto;
+      top: 4rem;
+      right: 20%;
+    }
+  }
+
+  > .arrow{
+    width: 1rem;
+    height: 90px;
+    display: block;
+    position: absolute;
+    background:transparent url('../images/ui/down-arrow.svg') left top no-repeat;
+    bottom: 8rem;
+    right: 40%;
+    display: none;
+    transition: all .3s;
+
+    @include media($m) {
+      display: block;
+    }
+
+    &:after, &:before{
+      display: none;
+    }
+
+    &:hover{
+      bottom: 7.8rem;
+      transition: all .3s;
+    }
   }
 }
 
 .header-eyebrow{
-  @include column(7,12);
-  margin-top: 8rem;
-  margin-left: 1/12*100%;
+  @include column(11.5,12);
+  margin-top: 4rem;
+  margin-left: .5/12*100%;
   margin-bottom: 2.5rem;
+  // text-align: center;
+
+  @include media($m) {
+    @include column(7,12);
+    margin-top: 11rem;
+    margin-left: 1/12*100%;
+    margin-bottom: 2.5rem;
+    text-align: left;
+  }
+
   > span{
     @include catamaran(800, 1rem);
     color: $main;
     text-transform: uppercase;
     letter-spacing: 1.4px;
-    background:#242526;
     border: 1px solid $main;
     border-radius: 2px;
     padding: .2rem .5rem .1rem .5rem;
@@ -77,15 +156,16 @@
   }
 }
 .header-title{
-  @include column(7,12);
-  margin-left: 1/12*100%;
-  > .arrow{
-    width: 9px;
-    height: 90px;
-    display: block;
-    position: absolute;
-    background:transparent url('../images/ui/down-arrow.svg') left top no-repeat;
-    bottom: -10rem;
-    left: .5rem;
+  @include column(11.5,12);
+  margin-left: .5/12*100%;
+  // text-align: center;
+
+  @include media($m) {
+    @include column(8,12);
+    margin-left: 1/12*100%;
+    text-align: left;
+  }
+  @include media($l) {
+    @include column(7,12);
   }
 }
