--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <!-- jQUERY -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+<script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 <!-- CONCAT FILES WITH CUSTOM JS -->
 <script src='{{ "/js/min/main.min.js" | relative_url }}'></script>
 <!-- WEB FONTS LOADER -->
@@ -12,13 +12,4 @@ families: [
 'Catamaran:100,200,300,400,500,600,700,800,900'
 ]}
 });
-</script>
-<!-- GOOGLE ANALITYCS -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'YOUR-CODE', 'auto');
-ga('send', 'pageview');
 </script>
