--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,34 +3,35 @@ layout: default
 ---
 <header id="hm-header" class="hm-header">
   <div class="box-wrap">
-    <div class="header-box_dark"></div>
-    <div class="header-box_light"></div>
+    <div class="header-box_dark animated scaleInUp"></div>
+    <div class="header-box_light animated scaleInDown">
+      <div class="green-pattern animated fadeInRight delay-6"></div>
+      <a href="javascript:void(0)" class="arrow animated fadeInDown delay-7" id="scroll-arrow"></a>
+    </div>
   </div>
   <div class="wrap">
-    <div class="header-eyebrow" id="logo"><span>David Gallardo</span></div>
-    <div class="header-title">
-      <h1>A guy who's focused on designing products that work beautifully.</h1>
-      <div class="arrow"></div>
+    <div class="header-eyebrow animated fadeInLeft delay-5" id="logo"><span>David Gallardo</span></div>
+    <div class="header-title animated fadeInLeft delay-3">
+      <h1 >A guy who's focused on designing products that work beautifully.</h1>
     </div>
   </div>
 </header>
 <section id="story" class="story">
   <div class="story_wrap wrap">
-    <div class="white-block">
       <div class="story_title">
-        <h2>My long story, short.</h2>
+        <h2 class="faded">My long story, short.</h2>
       </div>
       <div class="story_column-block">
-        <div class="story_column">
+        <div class="story_column faded ">
           <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/">traveling</a> the world during 2017. My couple and I started in St.Petersburg and finished in San Francisco.</p>
           <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/">LOLA</a> [Mullenlowe Group] leading a small team of 3 to 4 other designers. Even with a group that small, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
         </div>
-        <div class="story_column">
+        <div class="story_column faded delay-2">
           <p>Even before, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
           <p>
             In the side, I taught design in schools like <a href="https://www.ironhack.com/">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
           </div>
-          <div class="story_column_small">
+          <div class="story_column_small faded delay-4">
             <ul class="story-list">
               <li class="list_item"><span>2011</span>Mobivery</li>
               <li class="list_item"><span>2014</span>LOLA [Mullenlowe]</li>
@@ -39,28 +40,30 @@ layout: default
             </ul>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <section id="showcase" class="showcase">
     <div class="wrap">
-      <div class="green_pattern"></div>
-      <div class="showcase_title">
+      <div class="green_pattern  faded"></div>
+      <div class="showcase_title  faded">
         <h2>Showcase of recent projects.</h2>
-        <p>I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
+        <p class=" faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
       </div>
     </div>
     <div class="wrap">
       <ul class="showcase-block">
         {% for post in site.categories.case limit:10 %}
           {% if post.number == "01" %}
-            <li id="seat-case" class="showcase_item">
+            <li id="seat-case" class="showcase_item faded">
+              <div class="item_title title_mobile">
+                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR</span> <span>CONFIG</span></h3></a>
+                </div>
               <div class="item_image-block item_image-block_{{ post.number }}">
-                <div class="item_title">
+                <div class="item_title title_desktop faded">
                   <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG</span></h3></a>
                 </div>
               </div>
-              <div class="item_copy-block">
+              <div class="item_copy-block faded">
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
@@ -71,12 +74,15 @@ layout: default
           {% endif %}
           {% if post.number == "02" %}
             <li id="robot-case" class="showcase_item">
-              <div class="item_image-block item_image-block_{{ post.number }}">
-                <div class="item_title">
+              <div class="item_title title_mobile">
+                  <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
+                </div>
+              <div class="item_image-block item_image-block_{{ post.number }} faded">
+                <div class="item_title title_desktop faded">
                   <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                 </div>
               </div>
-              <div class="item_copy-block">
+              <div class="item_copy-block faded">
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
@@ -91,17 +97,17 @@ layout: default
   </section>
   <section id="showcase" class="showcase">
     <div class="wrap">
-      <div class="green_pattern"></div>
-      <div class="showcase_title">
-        <h2>More, maybe old maybe gone.</h2>
-        <p>I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
+      <div class="green_pattern faded"></div>
+      <div class="showcase_title ">
+        <h2 class="faded">More, maybe old maybe gone.</h2>
+        <p class="faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
       </div>
     </div>
     <div class="wrap">
       <div class="example-grid">
         <div class="grid-row">
           <div class="grid-item item-01">
-            <figure class="item-image">
+            <figure class="item-image faded">
               <img src="/images/grid/lola.png" alt="Lola MullenLowe Website">
               <figcaption class="item-copy">LOLA MullenLowe Responsive Website design</figcaption>
             </figure>
@@ -109,14 +115,14 @@ layout: default
         </div>
         <div class="grid-row">
           <div class="grid-item item-02">
-            <figure class="item-image">
+            <figure class="item-image faded">
               <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
               <figcaption class="item-copy">FCC Aqualia Water Use Dashboard</figcaption>
             </figure>
             
           </div>
           <div class="grid-item item-03">
-            <figure class="item-image">
+            <figure class="item-image faded">
               <img src="/images/grid/caixabank.png" alt="CaixaBank Media center concept">
               <figcaption class="item-copy">CaixaBank  Media Center Concept</figcaption>
             </figure>
@@ -124,7 +130,7 @@ layout: default
         </div>
         <div class="grid-row">
           <div class="grid-item item-04">
-            <figure class="item-image">
+            <figure class="item-image faded">
               <img src="/images/grid/wfa.png" alt="WFA Website Concept">
               <figcaption class="item-copy">World Federation of Advertisers Website Concept</figcaption>
             </figure>
