--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -4,19 +4,38 @@ h1, h2, h3, h4, h5, p, ul, li, a {
   @include no-space;
 }
 h1 {
-  @include catamaran(700, 2.5rem);
+  @include catamaran(300, 1.8rem);
   color: white;
   line-height: 1.08;
+  @include media($m) {
+    @include catamaran(700, 2.25rem);
+    line-height: 1.08;
+  }
+  @include media($l) {
+    @include catamaran(800, 2.5rem);
+    line-height: 1.08;
+  }
 }
 h2 {
-  @include catamaran(900, 2.4rem);
+  @include catamaran(900, 1.8rem);
   color: $title;
   line-height: 1.125;
+  
+  @include media($m) {
+    @include catamaran(900, 2.4rem);
+    line-height: 1.125;
+  }
+
 }
 h3 {
-  @include catamaran(900, 2.4rem);
+  @include catamaran(900, 1.6rem);
   color: $title;
   line-height: 1.125;
+
+  @include media($m) {
+    @include catamaran(900, 2.4rem);
+    line-height: 1.125;
+  }
 }
 h4 {
   @include catamaran(700, 1rem);
