Added contatct to the footer section.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
-		<footer >
-
+		<footer class="contact">
+			<div class="wrap">
+      <a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
+    </div>
 		</footer>		
 		</main>
 
