--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -117,7 +117,7 @@ layout: default
           <div class="grid-item item-02">
             <figure class="item-image faded">
               <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
-              <figcaption class="item-copy">FCC Aqualia Water Use Dashboard</figcaption>
+              <figcaption class="item-copy">FCC Aqualia Water Consumption Dashboard</figcaption>
             </figure>
             
           </div>
@@ -137,10 +137,5 @@ layout: default
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="contact">
-    <div class="wrap">
-      <a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
     </div>
   </section>
