Fixed Header and case list for small viewports.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,7 @@ layout: default
 </header>
 <section id="story" class="story">
   <div class="story_wrap wrap">
+    <div class="green-pattern green-pattern_first faded"></div>
       <div class="story_title">
         <h2 class="faded">My long story, short.</h2>
       </div>
@@ -44,7 +45,7 @@ layout: default
   </section>
   <section id="showcase" class="showcase">
     <div class="wrap">
-      <div class="green_pattern  faded"></div>
+      <div class="green-pattern faded"></div>
       <div class="showcase_title  faded">
         <h2>Showcase of recent projects.</h2>
         <p class=" faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
@@ -97,7 +98,7 @@ layout: default
   </section>
   <section id="showcase" class="showcase">
     <div class="wrap">
-      <div class="green_pattern faded"></div>
+      <div class="green-pattern faded"></div>
       <div class="showcase_title ">
         <h2 class="faded">More, maybe old maybe gone.</h2>
         <p class="faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
