--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -4,16 +4,19 @@ h1, h2, h3, h4, h5, p, ul, li, a {
   @include no-space;
 }
 h1 {
-  @include catamaran(300, 1.8rem);
+  @include catamaran(300, 1.6rem);
   color: white;
   line-height: 1.08;
+
+  @include media($s) {
+    @include catamaran(300, 1.8rem);
+    line-height: 1.08;
+  }
   @include media($m) {
     @include catamaran(700, 2.25rem);
-    line-height: 1.08;
   }
   @include media($l) {
     @include catamaran(800, 2.5rem);
-    line-height: 1.08;
   }
 }
 h2 {
