--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
     </div>
   </div>
   <div class="wrap">
-    <div class="header-eyebrow animated fadeInLeft delay-5" id="logo"><span>David Gallardo</span></div>
+    <div class="header-eyebrow animated fadeInLeft delay-5" id="logo" role="logo"><span>David Gallardo</span></div>
     <div class="header-title animated fadeInLeft delay-3">
-      <h1 >A guy who's focused on designing products that work beautifully.</h1>
+      <h1 class="h1-big">A guy who's focused on designing products that work beautifully.</h1>
     </div>
   </div>
 </header>
@@ -24,11 +24,11 @@ layout: default
       </div>
       <div class="story_column-block">
         <div class="story_column faded ">
-          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/">traveling</a> the world during 2017. My couple and I started in St.Petersburg and finished in San Francisco.</p>
-          <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/">LOLA</a> [Mullenlowe Group] leading a small team of 3 to 4 other designers. Even with a group that small, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
+          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/">traveling</a> around the world during 2017. My couple and I started in St.Petersburg last March and we are about to finish in San Francisco.</p>
+          <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/">LOLA</a> [Mullenlowe Group] leading a small team of 3 other designers. Being such a small group, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
         </div>
         <div class="story_column faded delay-2">
-          <p>Even before, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
+          <p>Previously, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
           <p>
             In the side, I taught design in schools like <a href="https://www.ironhack.com/">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
           </div>
@@ -37,7 +37,7 @@ layout: default
               <li class="list_item"><span>2011</span>Mobivery</li>
               <li class="list_item"><span>2014</span>LOLA [Mullenlowe]</li>
               <li class="list_item"><span>2017</span>The Earth  <span class="planet">🌏</span></li>
-              <li class="list_item"><span>2018</span><a href="#">Your company?</a></li>
+              <li class="list_item"><span>2018</span><a href="mailto:hello@dgallardo.com" id="company">Your company?</a></li>
             </ul>
           </div>
         </div>
@@ -48,7 +48,6 @@ layout: default
       <div class="green-pattern faded"></div>
       <div class="showcase_title  faded">
         <h2>Showcase of recent projects.</h2>
-        <p class=" faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
       </div>
     </div>
     <div class="wrap">
@@ -61,14 +60,14 @@ layout: default
                 </div>
               <div class="item_image-block item_image-block_{{ post.number }}">
                 <div class="item_title title_desktop faded">
-                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG</span></h3></a>
+                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG.</span></h3></a>
                 </div>
               </div>
               <div class="item_copy-block faded">
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
-                  <a href="http://www.seat.com" class="case-link">View Website</a>
+                  <a href="http://www.seat.com" class="case-link">Visit Website</a>
                 </div>
               </div>
             </li>
@@ -87,7 +86,7 @@ layout: default
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
-                  <a href="https://www.wefoundarobot.com" class="case-link">View Website</a>
+                  <a href="https://www.wefoundarobot.com" class="case-link">Visit Website</a>
                 </div>
               </div>
             </li>
@@ -100,8 +99,8 @@ layout: default
     <div class="wrap">
       <div class="green-pattern faded"></div>
       <div class="showcase_title ">
-        <h2 class="faded">More, maybe old maybe gone.</h2>
-        <p class="faded">I've been working for big (big) companies the last 3 years and things there move quite slow. The development occurs to be done by large consulting firms and the finest work usually can not be accomplished with that type of partners.</p>
+        <h2 class="faded">More work, maybe old maybe gone.</h2>
+        <p class="faded">Apart from SEAT, the last 7 years I've been busy designing for many other clients, some as a part of a team, some others solo. Here are some extra examples both, web and mobile. </p>
       </div>
     </div>
     <div class="wrap">
@@ -120,7 +119,6 @@ layout: default
               <img src="/images/grid/fcc.png" alt="FCC Aqualia Dashboard">
               <figcaption class="item-copy">FCC Aqualia Water Consumption Dashboard</figcaption>
             </figure>
-            
           </div>
           <div class="grid-item item-03">
             <figure class="item-image faded">
@@ -134,6 +132,20 @@ layout: default
             <figure class="item-image faded">
               <img src="/images/grid/wfa.png" alt="WFA Website Concept">
               <figcaption class="item-copy">World Federation of Advertisers Website Concept</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-item item-05">
+            <figure class="item-image faded">
+              <img src="/images/grid/aba.png" alt="ABA English App">
+              <figcaption class="item-copy">ABA English Mobile App Design</figcaption>
+            </figure>
+          </div>
+          <div class="grid-item item-06">
+            <figure class="item-image faded">
+              <img src="/images/grid/eltiempo.png" alt="CaixaBank Media center concept">
+              <figcaption class="item-copy">ElTiempo.es Mobile App Design</figcaption>
             </figure>
           </div>
         </div>
