--- a/_scss/modules/header-home.scss
+++ b/_scss/modules/header-home.scss
@@ -15,16 +15,21 @@
 .hm-header {
   width: 100%;
   max-width: $max-width;
-  height: 420px;
+  height: auto;
   display: block;
   position: relative;
   background: white;
   margin: 0 auto;
-  margin-top: .5rem;
+  z-index: 1;
+  padding: 3rem 0 9rem 0;
+  overflow: hidden;
 
   @include media($m) {
+    overflow: auto;
+    background: white;
     height: 680px;
     margin-top: 1rem;
+    padding: 0;
   }
   @include media($l) {
     height: 770px;
@@ -33,27 +38,48 @@
   @include media($lx) {
     margin-top: 3.5rem;
   }
+
+  &:before {
+    content: '';
+    position: absolute;
+    transform: rotate(-8deg);
+    transform-origin: 8% 0;
+    top: 0;
+    left: -25%;
+    z-index: -1;
+    width: 150%;
+    height: 90%;
+    display: block;
+    background: #292A2B;
+    box-shadow: 0 2rem 0rem 0 $main;
+
+    @include media($m) {
+      display: none;
+    }
+  } 
 }
 .box-wrap{
   width: 100%;  
   height: 100%;
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
-  display: flex;
   @include border-box;
 }
 .header-box_dark{
-  width: 50%;
-  height: 400px;
+  display: none;
+  width: 100%;
+  height: 100%;
   position: relative;
   top: 0;
   left: 0;
   background: #292A2B;
-  border-left: .5rem solid white;
   @include border-box;
 
   @include media($m) {
+    display: block;
+    width: 50%;
     height: 650px;
     border-left: 1rem solid white;
   }
@@ -66,16 +92,16 @@
   }
 }
 .header-box_light{
-  width: 50%;
-  height: 400px;
+  width: 0%;
+  height: 100%;
   position: absolute;
-  top: .5rem;
+  top: 0rem;
   right: 0;
   background: #2E2F30;
-  border-right: .5rem solid white;
   @include border-box;
 
   @include media($m) {
+    width: 50%;
     top: 1rem;
     height: 680px;
     border-right: 1rem solid white;
@@ -89,15 +115,18 @@
   }
   
   > .green-pattern{
-    width: 202px;
-    height: 142px;
+    width: 101px;
+    height: 71px;
     display: block;
     position: absolute;
     background:transparent url('../images/ui/pattern-green.svg') left top no-repeat;
+    background-size: 100%;
     bottom: -2rem;
     left: -5rem;
     display: none;
     @include media($m) {
+      width: 202px;
+      height: 142px;
       display: block;
       bottom: auto;
       left: auto;
@@ -133,11 +162,8 @@
 }
 
 .header-eyebrow{
-  @include column(11.5,12);
-  margin-top: 4rem;
-  margin-left: .5/12*100%;
-  margin-bottom: 2.5rem;
-  // text-align: center;
+  @include column(12,12);
+  margin-bottom: 1.5rem;
 
   @include media($m) {
     @include column(7,12);
@@ -148,20 +174,23 @@
   }
 
   > span{
-    @include catamaran(800, 1rem);
+    @include catamaran(800, .8rem);
     color: $main;
     text-transform: uppercase;
     letter-spacing: 1.4px;
     border: 1px solid $main;
     border-radius: 2px;
-    padding: .2rem .5rem .1rem .5rem;
+    padding: .1rem .5rem .05rem .5rem;
     margin-left: 2px;
+    @include media($m) {
+      @include catamaran(800, 1rem);
+      padding: .2rem .5rem .1rem .5rem;
+    }
   }
 }
 .header-title{
   @include column(11.5,12);
-  margin-left: .5/12*100%;
-  // text-align: center;
+  margin-left: 0rem;
 
   @include media($m) {
     @include column(8,12);
@@ -171,4 +200,6 @@
   @include media($l) {
     @include column(7,12);
   }
+
+
 }
