Small fixes and better organization for critical.css

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
   <div class="box-wrap">
     <div class="header-box_dark animated scaleInUp"></div>
     <div class="header-box_light animated scaleInDown">
-      <div class="green-pattern animated fadeInRight delay-6"></div>
+      <div class="green-pattern animated fadeIn delay-6"></div>
       <a href="javascript:void(0)" class="arrow animated fadeInDown delay-7" id="scroll-arrow"></a>
     </div>
   </div>
