--- a/_scss/critical.scss
+++ b/_scss/critical.scss
@@ -46,5 +46,10 @@ ul, ol, figure {
   }
 }
 
+// CRITICAL STUFF
+@import '../_scss/layouts/header-home';
+@import '../_scss/layouts/home-story';
+
+
 
 
