--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -323,7 +323,11 @@
     }
 }
 
+/////////////////////////////////////////
+//Dark Section
+/////////////////////////////////////////
 
+@import 'modules/dark';
 
 
 
