--- a/_scss/critical.scss
+++ b/_scss/critical.scss
@@ -34,6 +34,9 @@ main {
     font-size: 1.5em
   }
 }
+section{
+  background:white;
+}
 ::selection {
   color: black;
   background: lighten($green, 20);
